
[TestHandleRequestWithClients/11-parametermulti-json-na-true-na.json - 1]
client.SopsS3File{Bucket:"cdk-hnb659fds-assets-505755377845-eu-central-1", Key:"test-secrets/json/sopsfile-complex.enc-age.json"}
---

[TestHandleRequestWithClients/11-parametermulti-json-na-true-na.json - 2]
client.SopsS3File{Bucket:"cdk-hnb659fds-assets-505755377845-eu-central-1", Key:"test-secrets/json/sopsfile-complex.enc-age.json"}
---

[TestHandleRequestWithClients/11-parametermulti-json-na-true-na.json - 3]
map[string]interface {}{
    "keyId":            "arn:aws:kms:eu-central-1:505755377845:key/58b75958-883a-440c-842c-85af5d33a5bb",
    "parameterContent": "with",
    "parameterName":    "/11-parametermulti-json-na-true-na/some/deep/nested/arrays/0",
}
---

[TestHandleRequestWithClients/11-parametermulti-json-na-true-na.json - 4]
map[string]interface {}{
    "keyId":            "arn:aws:kms:eu-central-1:505755377845:key/58b75958-883a-440c-842c-85af5d33a5bb",
    "parameterContent": "several",
    "parameterName":    "/11-parametermulti-json-na-true-na/some/deep/nested/arrays/1",
}
---

[TestHandleRequestWithClients/11-parametermulti-json-na-true-na.json - 5]
map[string]interface {}{
    "keyId":            "arn:aws:kms:eu-central-1:505755377845:key/58b75958-883a-440c-842c-85af5d33a5bb",
    "parameterContent": "struct",
    "parameterName":    "/11-parametermulti-json-na-true-na/some/notsodeep",
}
---

[TestHandleRequestWithClients/11-parametermulti-json-na-true-na.json - 6]
map[string]interface {}{
    "keyId":            "arn:aws:kms:eu-central-1:505755377845:key/58b75958-883a-440c-842c-85af5d33a5bb",
    "parameterContent": "1.2345",
    "parameterName":    "/11-parametermulti-json-na-true-na/and_now/some/2/type",
}
---

[TestHandleRequestWithClients/11-parametermulti-json-na-true-na.json - 7]
map[string]interface {}{
    "keyId":            "arn:aws:kms:eu-central-1:505755377845:key/58b75958-883a-440c-842c-85af5d33a5bb",
    "parameterContent": "12345",
    "parameterName":    "/11-parametermulti-json-na-true-na/and_now/some/1/nested",
}
---

[TestHandleRequestWithClients/11-parametermulti-json-na-true-na.json - 8]
map[string]interface {}{
    "keyId":            "arn:aws:kms:eu-central-1:505755377845:key/58b75958-883a-440c-842c-85af5d33a5bb",
    "parameterContent": "structure",
    "parameterName":    "/11-parametermulti-json-na-true-na/some/deep/nested/object",
}
---

[TestHandleRequestWithClients/11-parametermulti-json-na-true-na.json - 9]
map[string]interface {}{
    "keyId":            "arn:aws:kms:eu-central-1:505755377845:key/58b75958-883a-440c-842c-85af5d33a5bb",
    "parameterContent": "Finish!",
    "parameterName":    "/11-parametermulti-json-na-true-na/and_now/some/3/tests",
}
---

[TestHandleRequestWithClients/11-parametermulti-json-na-true-na.json - 10]
map[string]interface {}{
    "keyId":            "arn:aws:kms:eu-central-1:505755377845:key/58b75958-883a-440c-842c-85af5d33a5bb",
    "parameterContent": "objects",
    "parameterName":    "/11-parametermulti-json-na-true-na/some/deep/nested/arrays/2/values/and",
}
---

[TestHandleRequestWithClients/11-parametermulti-json-na-true-na.json - 11]
map[string]interface {}{
    "keyId":            "arn:aws:kms:eu-central-1:505755377845:key/58b75958-883a-440c-842c-85af5d33a5bb",
    "parameterContent": "false",
    "parameterName":    "/11-parametermulti-json-na-true-na/and_now/some/0/basic",
}
---
